--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,10 @@
 body
 {
     font-family: "raleway","raleway-italic";
-    background-color: #F2F2F2;
+    --grey-color: #F2F2F2;
     --blue-color: #0065FC;
     --light-blue-color: #DEEBFF;
+    background-color: var(--grey-color);
 }
 
 #bloc_page{
@@ -57,8 +58,97 @@ header nav a:hover{
     border-top: var(--blue-color) solid;
 }
 
+img{    
+    max-width: 100%;
+}
+
 #signin{    
     color: var(--blue-color);
 }
 
+#bloc_body{    
+    display: flex;
+    flex-direction: column;
+}
 
+.title_section{
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between;
+}
+
+#bloc_recherche{
+
+}
+
+#bloc_hergements_populaire{ 
+    display: flex;
+    flex-direction: row;    
+    justify-content: space-around;
+}
+
+#bloc_hergements{
+    background-color: var(--light-blue-color);
+    max-width: 65%;     
+    flex: 2;   
+    display: flex;
+    flex-direction: column;
+}
+
+#list_hebergement{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;    
+    justify-content: space-around;
+}
+
+.bloc{
+    display: flex;
+    border-radius: 10px;
+    border: black solid 5px;
+}
+
+.hebergement{    
+    flex-direction: column;
+    max-width: 30%;
+}
+
+#bloc_populaire{
+    flex: 1;
+    min-width: 25%;
+}
+
+
+
+#list_populaire{    
+    display: flex;
+    flex-direction: column;
+
+}
+
+.populaire{
+    flex-direction: row;
+}
+
+#bloc_activite{
+
+}
+
+#list_activite{
+    display: flex;    
+    flex-direction: row;
+}
+
+.activite{    
+    flex-direction: column;
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+}
+
+footer div{
+    display: flex;
+    flex-direction: column;
+}
