--- a/css/style.css
+++ b/css/style.css
@@ -1,154 +1,368 @@
 @font-face {
-    font-family: "raleway";
-    src: url("../res/font/Raleway-VariableFont_wght.ttf");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "raleway";
+  src: url("../res/font/Raleway-VariableFont_wght.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-    font-family: "raleway-italic";
-    src: url("../res/font/Raleway-VariableFont_wght.ttf");
-    font-weight: italic;
-    font-style: italic;
+  font-family: "raleway-italic";
+  src: url("../res/font/Raleway-VariableFont_wght.ttf");
+  font-weight: italic;
+  font-style: italic;
 }
 
-body
-{
-    font-family: "raleway","raleway-italic";
-    --grey-color: #F2F2F2;
-    --blue-color: #0065FC;
-    --light-blue-color: #DEEBFF;
-    background-color: var(--grey-color);
+body {
+  font-family: "raleway", "raleway-italic";
+  margin: 0%;
+  --grey-color: #f2f2f2;
+  --blue-color: #0065fc;
+  --light-blue-color: #deebff;
+  /*background-color: var(--grey-color);*/
 }
 
-#bloc_page{
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    display: flex;
-    flex-direction: column;
+#bloc_page {
+  
+  display: flex;
+  flex-direction: column;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-#logo{
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-}
-
-header nav ul{
-    list-style-type: none;
-    display: flex;
-}
-header nav li{
-    margin-right: 10px;
-}
-header nav a{
-    font-size: 1.3em;    
-    color: black;
-    text-decoration: none;
-
-}
-header nav a:hover{
-    color: var(--blue-color);
-    border-top: var(--blue-color) solid;
-}
-
-img{    
-    max-width: 100%;
-}
-
-#signin{    
-    color: var(--blue-color);
-}
-
-#bloc_body{    
-    display: flex;
-    flex-direction: column;
-}
-
-.title_section{
-    display: flex;
-    flex-direction: row; 
-    justify-content: space-between;
-}
-
-#bloc_recherche{
-
-}
-
-#bloc_hergements_populaire{ 
-    display: flex;
-    flex-direction: row;    
-    justify-content: space-around;
-}
-
-#bloc_hergements{
-    background-color: var(--light-blue-color);
-    max-width: 65%;     
-    flex: 2;   
-    display: flex;
-    flex-direction: column;
-}
-
-#list_hebergement{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;    
-    justify-content: space-around;
-}
-
-.bloc{
-    display: flex;
-    border-radius: 10px;
-    border: black solid 5px;
-}
-
-.hebergement{    
-    flex-direction: column;
-    max-width: 30%;
-}
-
-#bloc_populaire{
-    flex: 1;
-    min-width: 25%;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 
 
-#list_populaire{    
-    display: flex;
-    flex-direction: column;
+#logo {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+header nav ul {
+  list-style-type: none;
+  display: flex;
+}
+header nav li {
+  margin-right: 1em;
+}
+header nav a {
+  font-size: 1.3em;
+  padding-top: 2.2em;
+  color: black;
+  text-decoration: none;
+}
+header nav a:hover, .selected{
+  color: var(--blue-color);
+  border-top: var(--blue-color) solid;
+}
+
+img {
+  max-width: 100%;
+}
+
+
+
+#signin {
+  color: var(--blue-color);
+}
+
+#bloc_body {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.title_section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.7em;
+}
+
+.title_section h1{
+  font-weight: bold;
+  margin-top: 0%;
+}
+
+.title_section i{
+  margin-top: 0%;
+  color: black;
+}
+
+#bloc_research {
+  
+}
+
+#bloc_research h1{
+  margin-top: 0.5em;
+  margin-bottom: 0em;
+}
+
+#bloc_research h2{
+  color: black;
+  font-weight: normal;
+  font-size:  1em;
+  margin-top: 0.4em;
+  margin-bottom: 1.5em;
+}
+
+.search {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+.search i{
+  background-color: var(--grey-color);
+  color:black;
+  padding: 1em;
+  border-top-left-radius: 1em;
+  border-bottom-left-radius: 1em;
+}
+
+.search input{
+  border-right: white;
+  border-left: white;
+  border-top: solid 0.2em var(--grey-color);
+  border-bottom: solid 0.2em var(--grey-color);
+  padding: 1em;  
+}
+.search p{
+  background-color: var(--blue-color);
+  padding: 1em;  
+  margin: 0%;
+  color: white;  
+  border-top-right-radius: 1em;
+  border-bottom-right-radius: 1em;
+}
+
+#bloc_filters {
+  margin-bottom: 2em;
+  margin-bottom: 2em;
+  padding-top: 1em;
+  display: flex;
+  flex-direction: row;
+  font-weight: bold;
+}
+
+#bloc_filters label{
+  margin-top: 1em;
+}
+#list_filters {
+  display: flex;
+  flex-direction: row;
+}
+.filter {
+  border-top: solid 0.2em var(--grey-color);
+  border-right: solid 0.2em var(--grey-color);
+  border-bottom: solid 0.2em var(--grey-color);
+  border-radius: 3em;
+  margin-left: 1em;
+  padding-right: 1em;
+}
+
+.filter i {
+  border-radius: 3em;
+  background-color: var(--light-blue-color);
+  color: var(--blue-color);
+  padding: 1em;
+  margin-right: 1em;
+}
+
+.img_accommodation,.img_populaire,.img_activite{
+  object-fit: cover;
+}
+
+#bloc_accommodations_populaire {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#bloc_accommodations {
+  background-color: var(--grey-color);
+  max-width: 75%;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  margin-right: 2em;  
+  padding: 3em;
+}
+
+#list_accommodation {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.bloc {
+  display: flex;
+  padding: 0.3em;
+  background-color: white;
+  margin-bottom: 2em;
+}
+
+.description{  
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.description h3 {
+  min-width: 100%;
+  margin: 0em;
+  font-size: 1.3em;
+}
+.description h4 {
+  margin: 0em;
+  margin-top: 1em;
+  font-size: 1em;
+}
+
+#bloc_accommodations,#bloc_populaire,.bloc{
+  border-radius: 1.7em;
+}
+
+i{
+  color: var(--blue-color);
+}
+
+.grey{
+  color: var(--grey-color);
+}
+
+
+.accommodation {
+  flex-direction: column;
+  min-width: 30%;
+  max-width: 30%;
+  max-height: 15em;
+}
+
+.accommodation .description{
+  max-height: 40%;
+}
+
+.img_accommodation{  
+  max-height: 60%;
+  border-top-left-radius: 1.7em;
+  border-top-right-radius: 1.7em;
+}
+
+#bloc_populaire {
+  background-color: var(--grey-color);
+  flex: 1;
+  min-width: 15%;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  margin-left: 2em;
+  padding: 3em;
+}
+
+#list_populaire {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  min-height: 100%;
+  
+}
+
+.populaire {
+  flex-direction: row;  
+  max-width: 100%; 
+  min-width: 30%;
+  min-height: 9em;
+  max-height: 9em;
+}
+
+.populaire .description .star_score{
+  
+}
+
+.img_populaire{ 
+  border-top-left-radius: 1.7em;
+  border-bottom-left-radius: 1.7em;
+  max-width: 35%; 
 
 }
 
-.populaire{
-    flex-direction: row;
+#bloc_activite {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2em;
+  margin-bottom: 2em;  
+  height: 30em;
+  min-height: 500px;
+
 }
 
-#bloc_activite{
-
+#list_activite {
+  display: grid;
+  grid-column: 38% 38% 38% 38%;
+  grid-gap: 2em;
+  height: 30em;
 }
 
-#list_activite{
-    display: flex;    
-    flex-direction: row;
+.img_activite{
+  border-top-left-radius: 1.7em;
+  border-top-right-radius: 1.7em;
+  height: 85%;
 }
 
-.activite{    
-    flex-direction: column;
+.activite {
+  flex-direction: column;
+  border: 5px solid black;
 }
 
-footer{
-    display: flex;
-    justify-content: space-around;
+.fill1{
+  grid-column: 1 / 2;
+  grid-row: 1 / 5;
 }
 
-footer div{
-    display: flex;
-    flex-direction: column;
+.above1{
+  grid-column: 2 / 3;
+  grid-row: 1 / 4;
+  
+}
+.under1{
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+}
+.fill2{
+  grid-column: 3 / 4;
+  grid-row: 1 / 5;  
+}
+.above2{
+  grid-column: 4 / 5;
+  grid-row: 1/ 3;
+}
+.under2{
+  grid-column: 4 / 5;
+  grid-row: 3 / 5;
+}
+
+footer {
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--grey-color);
+}
+
+footer div {
+  display: flex;
+  flex-direction: column;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
 }
