--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ body {
 }
 
 #bloc_page {
-  
   display: flex;
   flex-direction: column;
 }
@@ -36,8 +35,6 @@ header {
   margin-right: auto;
   margin-left: auto;
 }
-
-
 
 #logo {
   display: flex;
@@ -58,7 +55,8 @@ header nav a {
   color: black;
   text-decoration: none;
 }
-header nav a:hover, .selected{
+header nav a:hover,
+.selected {
   color: var(--blue-color);
   border-top: var(--blue-color) solid;
 }
@@ -66,8 +64,6 @@ header nav a:hover, .selected{
 img {
   max-width: 100%;
 }
-
-
 
 #signin {
   color: var(--blue-color);
@@ -88,29 +84,32 @@ img {
   font-size: 1.7em;
 }
 
-.title_section h1{
+.title_section h1 {
   font-weight: bold;
   margin-top: 0%;
 }
 
-.title_section i{
+.title_section i {
   margin-top: 0%;
   color: black;
 }
 
-#bloc_research {
-  
+#bloc_body,
+#bloc_research,
+#bloc_accommodations_populaire,
+#bloc_activite {
+  margin-bottom: 2em;
 }
 
-#bloc_research h1{
+#bloc_research h1 {
   margin-top: 0.5em;
   margin-bottom: 0em;
 }
 
-#bloc_research h2{
+#bloc_research h2 {
   color: black;
   font-weight: normal;
-  font-size:  1em;
+  font-size: 1em;
   margin-top: 0.4em;
   margin-bottom: 1.5em;
 }
@@ -122,26 +121,26 @@ img {
   margin-bottom: 0.5em;
 }
 
-.search i{
+.search i {
   background-color: var(--grey-color);
-  color:black;
+  color: black;
   padding: 1em;
   border-top-left-radius: 1em;
   border-bottom-left-radius: 1em;
 }
 
-.search input{
+.search input {
   border-right: white;
   border-left: white;
   border-top: solid 0.2em var(--grey-color);
   border-bottom: solid 0.2em var(--grey-color);
-  padding: 1em;  
+  padding: 1em;
 }
-.search p{
+.search p {
   background-color: var(--blue-color);
-  padding: 1em;  
+  padding: 1em;
   margin: 0%;
-  color: white;  
+  color: white;
   border-top-right-radius: 1em;
   border-bottom-right-radius: 1em;
 }
@@ -155,7 +154,7 @@ img {
   font-weight: bold;
 }
 
-#bloc_filters label{
+#bloc_filters label {
   margin-top: 1em;
 }
 #list_filters {
@@ -179,7 +178,9 @@ img {
   margin-right: 1em;
 }
 
-.img_accommodation,.img_populaire,.img_activite{
+.img_accommodation,
+.img_populaire,
+.img_activite {
   object-fit: cover;
 }
 
@@ -195,7 +196,7 @@ img {
   flex: 2;
   display: flex;
   flex-direction: column;
-  margin-right: 2em;  
+  margin-right: 2em;
   padding: 3em;
 }
 
@@ -210,10 +211,14 @@ img {
   display: flex;
   padding: 0.3em;
   background-color: white;
+}
+
+#list_accommodation .bloc,
+#list_populaire .bloc {
   margin-bottom: 2em;
 }
 
-.description{  
+.description {
   margin: 1em;
   display: flex;
   flex-direction: column;
@@ -230,18 +235,19 @@ img {
   font-size: 1em;
 }
 
-#bloc_accommodations,#bloc_populaire,.bloc{
-  border-radius: 1.7em;
+#bloc_accommodations,
+#bloc_populaire,
+.bloc {
+  border-radius: 2em;
 }
 
-i{
+i {
   color: var(--blue-color);
 }
 
-.grey{
+.grey {
   color: var(--grey-color);
 }
-
 
 .accommodation {
   flex-direction: column;
@@ -250,11 +256,11 @@ i{
   max-height: 15em;
 }
 
-.accommodation .description{
+.accommodation .description {
   max-height: 40%;
 }
 
-.img_accommodation{  
+.img_accommodation {
   max-height: 60%;
   border-top-left-radius: 1.7em;
   border-top-right-radius: 1.7em;
@@ -274,87 +280,82 @@ i{
 #list_populaire {
   display: flex;
   flex-direction: column;
-  align-content: space-between;
-  min-height: 100%;
-  
+  justify-content: space-between;
 }
 
 .populaire {
-  flex-direction: row;  
-  max-width: 100%; 
+  flex-direction: row;
+  max-width: 100%;
   min-width: 30%;
   min-height: 9em;
   max-height: 9em;
+  margin-bottom: 2em;
 }
 
-.populaire .description .star_score{
-  
+.populaire .description .star_score {
 }
 
-.img_populaire{ 
+.img_populaire {
   border-top-left-radius: 1.7em;
   border-bottom-left-radius: 1.7em;
-  max-width: 35%; 
-
+  max-width: 35%;
 }
 
 #bloc_activite {
   display: flex;
   flex-direction: column;
-  margin-top: 2em;
-  margin-bottom: 2em;  
-  height: 30em;
-  min-height: 500px;
-
+  height: 40em;
 }
 
 #list_activite {
-  display: grid;
-  grid-column: 38% 38% 38% 38%;
-  grid-gap: 2em;
-  height: 30em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-height: 85%;
 }
 
-.img_activite{
+.img_activite {
   border-top-left-radius: 1.7em;
   border-top-right-radius: 1.7em;
-  height: 85%;
+  margin-bottom: 1em;
+  max-height: 60%;
 }
 
 .activite {
   flex-direction: column;
   border: 5px solid black;
+  padding: 0%;
+  min-width: 100%;
 }
 
-.fill1{
-  grid-column: 1 / 2;
-  grid-row: 1 / 5;
+.activite h3 {
+  min-height: 2em;
+  margin-top: 0em;
+  margin-bottom: 2em;
 }
 
-.above1{
-  grid-column: 2 / 3;
-  grid-row: 1 / 4;
-  
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 24%;
 }
-.under1{
-  grid-column: 2 / 3;
-  grid-row: 4 / 5;
+
+.fill {
+  max-height: 100%;
 }
-.fill2{
-  grid-column: 3 / 4;
-  grid-row: 1 / 5;  
+.tall {
+  max-height: 69%;
 }
-.above2{
-  grid-column: 4 / 5;
-  grid-row: 1/ 3;
+.medium {
+  max-height: 50%;
 }
-.under2{
-  grid-column: 4 / 5;
-  grid-row: 3 / 5;
+.small {
+  max-height: 29%;
 }
 
 footer {
-  margin-top: 1em;
+  margin-top: auto;
   display: flex;
   justify-content: space-between;
   background-color: var(--grey-color);
