--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,13 @@ header {
 }
 
 #logo {
-  flex-grow: 1;  
+  flex-grow: 1;
   margin-top: 3.225em;
 }
 
-#logo img{
+#logo img {
   width: 10em;
 }
-
 
 header nav {
   font-size: 1.5em;
@@ -73,7 +72,7 @@ header nav a:hover,
 .selected {
   color: var(--blue-color);
   border-top: var(--blue-color) solid;
-} 
+}
 
 img {
   max-width: 100%;
@@ -173,14 +172,23 @@ img {
   padding-left: 0.5em;
 }
 
-.search p {
+.search button {
   background-color: var(--blue-color);
+  border: none;
   padding: 1em;
-  margin: 0%;
+  margin: 0;
   color: white;
-  border-top-right-radius: 1em;
-  border-bottom-right-radius: 1em;
-  width: 6.25em;
+  border-top-right-radius: 1.5em;
+  border-bottom-right-radius: 1.5em;
+}
+.search button div{
+  font-family: "raleway", "raleway-italic";
+  font-weight: bolder;
+  font-size: 1.6em;
+}
+
+#mobile_button {
+  display: none;
 }
 
 #bloc_filters {
@@ -269,7 +277,7 @@ img {
   padding-bottom: 0em;
 }
 
-#show_more{
+#show_more {
   font-size: 1.9em;
   font-weight: bolder;
   margin-left: 0.2em;
@@ -370,8 +378,6 @@ i {
   padding: 4em;
   padding-bottom: 0em;
 }
-
-
 
 #list_populaire {
   display: flex;
@@ -503,39 +509,36 @@ footer a {
   margin-bottom: 0.95em;
 }
 
-
 @media screen and (max-width: 1200px) {
   header {
-    width: 100%;
+    width: 100vw;
     margin-bottom: 0;
     flex-wrap: wrap;
     justify-content: space-between;
-  }  
+  }
   #logo {
     margin: 0;
     order: 0;
     flex-grow: 0;
   }
-  #logo img{
-
+  #logo img {
   }
-  
-  #primary_nav{
+
+  #primary_nav {
     order: 2;
   }
 
-  #signin_nav{
+  #signin_nav {
     order: 1;
   }
 
   header nav {
-    margin-top:0;
-  }  
-  header nav ul {
-
+    margin-top: 0;
   }
-  header nav li { 
-    margin-left: 0;    
+  header nav ul {
+  }
+  header nav li {
+    margin-left: 0;
   }
   header nav a {
     padding-top: 0;
@@ -544,20 +547,43 @@ footer a {
   .selected {
     border-top: none;
     border-bottom: var(--blue-color) solid;
-  }  
+  }
   #signin {
     align-self: flex-start;
   }
   #bloc_body {
-    width: 100%;
+    width: 100vw;;
   }
-  #bloc_populaire,#bloc_accommodations,#bloc_activite {
-    min-width: 100%;
-    max-width: 100%;
+  #desktop_button {
+    display: none;
+  }
+  #mobile_button {
+    display: block;
+    border-radius: 1.5em;
+  }
+  #mobile_button i{
+    background-color: var(--blue-color);
+    color: white;
     margin: 0;
+    padding: 0.5em;
+    padding-right:0.75em;
+    padding-left:0.75em;
+    font-size: 1.5em;
+  }
+
+  #bloc_search,
+  #bloc_populaire,
+  #bloc_accommodations,
+  #bloc_activite {
+    min-width: 100vw;
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;
   }
   #bloc_accommodations_populaire {
     flex-direction: column-reverse;
+    margin: 0;
+    padding: 0;
   }
   #bloc_accommodations,
   #bloc_populaire {
@@ -565,12 +591,13 @@ footer a {
   }
   #bloc_accommodations {
     background-color: white;
-    margin: 0;
-    padding: 1em;
   }
-  .accommodation {
-    min-width: 100%;
-    max-width: 100%;
+  .accommodation,
+  .populaire,
+  .activite {
+    margin: 0;
+    min-width: 85vw;
+    max-width: 90vw;
     max-height: 19em;
   }
   #list_activite {
