--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "raleway";
-  src: url("../res/font/Raleway-VariableFont_wght.ttf");
+  src: url("../font/Raleway-VariableFont_wght.ttf");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "raleway-italic";
-  src: url("../res/font/Raleway-VariableFont_wght.ttf");
+  src: url("../font/Raleway-VariableFont_wght.ttf");
   font-weight: italic;
   font-style: italic;
 }
@@ -20,7 +20,7 @@ body {
   padding-top: 0em;
 }
 
-#bloc_page {
+#bloc-page {
   padding: 0em;
   margin-top: 0em;
   width: 100%;
@@ -83,7 +83,7 @@ img {
   margin-right: 2em;
 }
 
-#bloc_body {
+#bloc-body {
   display: flex;
   flex-direction: column;
   width: 93%;
@@ -91,7 +91,7 @@ img {
   margin-left: auto;
 }
 
-.title_section {
+.section-title {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -99,37 +99,37 @@ img {
   margin-bottom: 0.9em;
 }
 
-.title_section h2 {
+.section-title h2 {
   font-weight: bold;
   font-size: 2.3em;
   margin-top: 0%;
 }
 
-.title_section i {
+.section-title i {
   margin-top: 0.2em;
   font-size: 2.2em;
   color: black;
 }
 
-#bloc_body,
-#bloc_research,
-#bloc_accommodations_populaire,
-#bloc_activite {
+#bloc-body,
+#bloc-research,
+#bloc-accommodations-popular,
+#bloc-activity {
   margin-top: 0%;
   margin-bottom: 4em;
 }
 
-#bloc_research {
+#bloc-research {
   padding-left: 0.35em;
 }
 
-#bloc_research h1 {
+#bloc-research h1 {
   font-size: 2.23em;
   font-weight: bolder;
   margin-top: 0.5em;
 }
 
-#bloc_research h2 {
+#bloc-research h2 {
   color: black;
   font-weight: normal;
   font-size: 1.8em;
@@ -187,11 +187,11 @@ img {
   font-size: 1.6em;
 }
 
-#mobile_button {
+#mobile-button {
   display: none;
 }
 
-#bloc_filters {
+#bloc-filters {
   margin-bottom: 2em;
   margin-bottom: 2em;
   padding-top: 1em;
@@ -202,12 +202,12 @@ img {
   font-weight: bolder;
 }
 
-#bloc_filters label {
+#bloc-filters label {
   margin-top: 0.7em;
   margin-left: 0.5em;
   margin-right: 0.5em;
 }
-#list_filters {
+#list-filters {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -236,9 +236,9 @@ img {
   position: relative;
 }
 
-#search_information {
+#search-information {
 }
-#search_information i {
+#search-information i {
   border-radius: 2em;
   padding: 0.75em;
   padding-top: 0.45em;
@@ -247,27 +247,27 @@ img {
   font-size: 1.25em;
   margin-right: 0.5em;
 }
-#search_information span {
+#search-information span {
   font-size: 1.5em;
   font-weight: bolder;
 }
 
-.img_accommodation,
-.img_populaire,
-.img_activite {
+.img-accommodation,
+.img-popular,
+.img-activity {
   object-fit: cover;
 }
 
-#bloc_accommodations_populaire {
+#bloc-accommodations-popular {
   display: flex;
   justify-content: space-between;
 }
 
-#bloc_accommodations_populaire {
+#bloc-accommodations-popular {
   flex-direction: row;
 }
 
-#bloc_accommodations {
+#bloc-accommodations {
   background-color: var(--grey-color);
   flex: 2;
   display: flex;
@@ -277,14 +277,14 @@ img {
   padding-bottom: 0em;
 }
 
-#show_more {
+#show-more {
   font-size: 1.9em;
   font-weight: bolder;
   margin-left: 0.2em;
   margin-bottom: 0em;
 }
 
-#list_accommodation {
+#list-accommodation {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -299,8 +299,8 @@ img {
   box-shadow: 5px 10px 15px var(--grey-color);
 }
 
-#list_accommodation .bloc,
-#list_populaire .bloc {
+#list-accommodation .bloc,
+#list-popular .bloc {
   margin-bottom: 3em;
 }
 
@@ -323,21 +323,21 @@ img {
   font-size: 1.4em;
 }
 
-.description .star_score {
+.description .star-score {
   position: absolute;
   font-size: 1.03em;
 }
 
-.accommodation .description .star_score {
+.accommodation .description .star-score {
   margin-top: 0.4em;
   bottom: 0;
 }
-.populaire .description .star_score {
+.popular .description .star-score {
   bottom: 0;
 }
 
-#bloc_accommodations,
-#bloc_populaire,
+#bloc-accommodations,
+#bloc-popular,
 .bloc {
   border-radius: 2em;
 }
@@ -361,13 +361,13 @@ i {
   height: 100%;
 }
 
-.img_accommodation {
+.img-accommodation {
   max-height: 60%;
   border-top-left-radius: 1.7em;
   border-top-right-radius: 1.7em;
 }
 
-#bloc_populaire {
+#bloc-popular {
   background-color: var(--grey-color);
   flex: 1;
   min-width: 10%;
@@ -379,13 +379,13 @@ i {
   padding-bottom: 0em;
 }
 
-#list_populaire {
+#list-popular {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.populaire {
+.popular {
   flex-direction: row;
   max-width: 100%;
   min-width: 30%;
@@ -393,30 +393,30 @@ i {
   max-height: 13em;
   margin-bottom: 3.5em;
 }
-.populaire .description {
+.popular .description {
   margin-top: 0.5em;
   margin-left: 2em;
 }
 
-.img_populaire {
+.img-popular {
   border-top-left-radius: 1.7em;
   border-bottom-left-radius: 1.7em;
   max-width: 38.2%;
 }
 
-#bloc_activite {
+#bloc-activity {
   display: flex;
   flex-direction: column;
   padding-top: 2em;
 }
 
-#list_activite {
+#list-activity {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   max-height: 46.5em;
 }
-.img_activite {
+.img-activity {
   border-top-left-radius: 1.7em;
   border-top-right-radius: 1.7em;
   margin-bottom: 1em;
@@ -429,13 +429,13 @@ i {
   max-width: 22.5%;
 }
 
-.activite {
+.activity {
   flex-direction: column;
   padding: 0%;
   margin-bottom: 2em;
 }
 
-.activite h3 {
+.activity h3 {
   min-height: 2em;
   margin-top: 0em;
   font-weight: bolder;
@@ -443,14 +443,14 @@ i {
   font-size: 1.7em;
 }
 
-.img_activite {
+.img-activity {
   margin-bottom: 2em;
 }
 
 .fill {
   height: 100%;
 }
-.fill .img_activite {
+.fill .img-activity {
   min-height: 88%;
   max-height: 90%;
 }
@@ -458,7 +458,7 @@ i {
 .tall {
   max-height: 51%;
 }
-.tall .img_activite {
+.tall .img-activity {
   min-height: 78%;
   max-height: 87%;
 }
@@ -466,7 +466,7 @@ i {
 .medium {
   max-height: 43.5%;
 }
-.medium .img_activite {
+.medium .img-activity {
   min-height: 73%;
   max-height: 87%;
 }
@@ -474,7 +474,7 @@ i {
 .small {
   max-height: 35%;
 }
-.small .img_activite {
+.small .img-activity {
   min-height: 67%;
   max-height: 90%;
 }
@@ -483,7 +483,7 @@ footer {
   background-color: var(--grey-color);
 }
 
-.footer_content {
+.footer-content {
   margin-right: 3.5%;
   margin-left: 3.5%;
   margin-top: auto;
@@ -524,11 +524,11 @@ footer a {
   #logo img {
   }
 
-  #primary_nav {
+  #primary-nav {
     order: 2;
   }
 
-  #signin_nav {
+  #signin-nav {
     order: 1;
   }
 
@@ -540,6 +540,13 @@ footer a {
   header nav li {
     margin-left: 0;
   }
+
+  
+  #primary-nav li {
+    border-bottom: var(--grey-color) solid;
+  }
+
+
   header nav a {
     padding-top: 0;
   }
@@ -551,17 +558,17 @@ footer a {
   #signin {
     align-self: flex-start;
   }
-  #bloc_body {
+  #bloc-body {
     width: 100vw;;
   }
-  #desktop_button {
+  #desktop-button {
     display: none;
   }
-  #mobile_button {
+  #mobile-button {
     display: block;
     border-radius: 1.5em;
   }
-  #mobile_button i{
+  #mobile-button i{
     background-color: var(--blue-color);
     color: white;
     margin: 0;
@@ -571,43 +578,43 @@ footer a {
     font-size: 1.5em;
   }
 
-  #bloc_search,
-  #bloc_populaire,
-  #bloc_accommodations,
-  #bloc_activite {
+  #bloc-search,
+  #bloc-popular,
+  #bloc-accommodations,
+  #bloc-activity {
     min-width: 100vw;
     max-width: 100vw;
     margin: 0;
     padding: 0;
   }
-  #bloc_accommodations_populaire {
+  #bloc-accommodations-popular {
     flex-direction: column-reverse;
     margin: 0;
     padding: 0;
   }
-  #bloc_accommodations,
-  #bloc_populaire {
+  #bloc-accommodations,
+  #bloc-popular {
     border-radius: 0;
   }
-  #bloc_accommodations {
+  #bloc-accommodations {
     background-color: white;
   }
   .accommodation,
-  .populaire,
-  .activite {
+  .popular,
+  .activity {
     margin: 0;
     min-width: 85vw;
     max-width: 90vw;
     max-height: 19em;
   }
-  #list_activite {
+  #list-activity {
     flex-direction: column;
     max-height: none;
   }
   .column {
     max-width: none;
   }
-  .footer_content {
+  .footer-content {
     flex-direction: column;
   }
 }
