--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -7,7 +7,6 @@
 @font-face {
   font-family: "raleway-italic";
   src: url("../font/Raleway-VariableFont_wght.ttf");
-  font-weight: italic;
   font-style: italic;
 }
 
@@ -52,19 +51,23 @@ header {
 header nav {
   font-size: 1.5em;
   font-weight: bolder;
-  margin-top: 2.15em;
+  margin: 0;
 }
 
 header nav ul {
   list-style-type: none;
   display: flex;
   flex-direction: row;
-}
-header nav li {
-  margin-left: 4.6em;
+  margin: 0;
+  padding: 0;
 }
 header nav a {
-  padding-top: 3em;
+  padding-top: 2.9em;;
+  margin-left: 2.5em;
+  padding-right: 1em;
+  padding-left: 1em;
+}
+header nav a {
   color: black;
   text-decoration: none;
 }
@@ -181,7 +184,7 @@ img {
   border-top-right-radius: 1.5em;
   border-bottom-right-radius: 1.5em;
 }
-.search button p{
+.search button span {
   font-family: "raleway", "raleway-italic";
   font-weight: bolder;
   font-size: 1.6em;
@@ -521,39 +524,63 @@ footer a {
   #logo {
     margin: 0;
     order: 0;
+    width: 6em;
     flex-grow: 0;
+    margin-left: 1em;
+    margin-top: 0.7em;
   }
   #logo img {
   }
 
   #primary-nav {
     order: 2;
+    width: 100%;
+    padding-top: 1em;
   }
 
   #sign-in-nav {
     order: 1;
+    margin-left: 1em;
+    margin-top: 1.2em;
   }
 
   header nav {
+    font-size: 1.2em;
     margin-top: 0;
   }
+
+  #primary-nav ul {
+    min-width: 100%;
+    max-width: 100%;
+    padding: 0;
+  }
+  #primary-nav a {
+    min-width: 50%;
+    max-width: 50%;
+  }
+
   header nav ul {
+    margin: 0;
   }
   header nav li {
     margin-left: 0;
   }
 
-  
-  #primary-nav li {
+  #primary-nav a {
     border-bottom: var(--grey-color) solid;
+    padding-bottom: 0.5em;
   }
 
+  #primary-nav a li{
+    text-align: center;
+  }
 
   header nav a {
     padding-top: 0;
+    margin: 0;
   }
-  header nav a:hover,
-  .selected {
+  #primary-nav a:hover,
+  #primary-nav .selected {
     border-top: none;
     border-bottom: var(--blue-color) solid;
   }
@@ -561,7 +588,7 @@ footer a {
     align-self: flex-start;
   }
   #bloc-body {
-    width: 100vw;;
+    width: 100vw;
   }
   .desktop-button {
     display: none;
@@ -570,17 +597,17 @@ footer a {
     display: block;
     border-radius: 1.5em;
   }
-  .mobile-button i{
+  .mobile-button i {
     background-color: var(--blue-color);
     color: white;
     margin: 0;
     padding: 0.5em;
-    padding-right:0.75em;
-    padding-left:0.75em;
+    padding-right: 0.75em;
+    padding-left: 0.75em;
     font-size: 1.5em;
   }
 
-  #bloc-search,
+  #bloc-research,
   #bloc-popular,
   #bloc-accommodations,
   #bloc-activity {
@@ -618,5 +645,13 @@ footer a {
   }
   .footer-content {
     flex-direction: column;
+  }
+
+  #bloc-research,
+  #bloc-popular,
+  #bloc-accommodations,
+  #bloc-activity,
+  footer {
+    display: none;
   }
 }
