--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -540,7 +540,7 @@ footer a {
 
   #sign-in-nav {
     order: 1;
-    margin-left: 1em;
+    margin-left: 0em;
     margin-top: 1.2em;
   }
 
@@ -588,6 +588,7 @@ footer a {
   .sign-in {
     align-self: flex-start;
     margin: 0;
+    padding-left: 0;
   }
   #bloc-body {
     width: 100vw;
