--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -735,12 +735,14 @@ footer a {
   #bloc-accommodations {
     background-color: white;
   }
-  .accommodation,
-  .popular,
+  .popular{
+    margin: 0;
+  }
+  .accommodation,  
   .activity {
     margin: 0;
-    min-width: 96%;
-    max-width: 100%;
+    min-width: 98%;
+    max-width: 98%;
   }
 
   #list-accommodation .bloc,
