--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -536,7 +536,7 @@ footer a {
 @media screen and (max-width: 1300px) {
   header,
   #bloc-body {
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
   }
